--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lora_bold"
         android:gravity="center"
+        android:lineSpacingExtra="4sp"
         android:maxLines="8"
         android:text="@string/quote_text_sample"
         android:textAlignment="center"
